--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5502,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#152D54",
+    "titleBar.activeBackground": "#1E3F76",
+    "titleBar.activeForeground": "#F8FAFD"
+  }
 }
